# BubbleID-Flow

./: .gitignore  README.md  pyproject.toml
configs/: flow_mrcnn.yaml
docs/: adaptation_plan.md  baseline_15gs_multimodal_results.md  environment.md  key_figures_for_manuscript.md  labeling_protocol.md  manuscript_multimodal_flow_boiling.md  multimodal_manuscript_plan.md  training_pixel_model.md
outputs/multimodal/10gs_22C_baseline/: 10gs_22C_image_frame_metrics.csv  10gs_22C_image_state_summary.csv  10gs_22C_multimodal_state_summary.csv
outputs/multimodal/15gs_20C_baseline/: 15gs_20C_image_frame_metrics.csv  15gs_20C_image_state_summary.csv  15gs_20C_multimodal_state_summary.csv
outputs/multimodal/25gs_20C_baseline/: 25gs_20C_image_frame_metrics.csv  25gs_20C_image_state_summary.csv  25gs_20C_multimodal_state_summary.csv
outputs/multimodal/5gs_22C_baseline/: 5gs_22C_image_frame_metrics.csv  5gs_22C_image_state_summary.csv  5gs_22C_multimodal_state_summary.csv
outputs/multimodal/cross_case_synthesis/: combined_multimodal_state_summary.csv  (+1 more)
scripts/: analyze_multimodal_case.py  labelme_to_coco.py  list_images.py  plot_vapor_fraction_profile.py  predict_baseline.py  predict_detectron2.py  predict_pixel_model.py  prepare_dataset.py  sample_frames.py  setup_windows_detectron2_env.ps1  synthesize_multimodal_results.py  train_detectron2.py  train_pixel_model.py
src/bubbleid_flow/: __init__.py  baseline.py  coco.py  io.py  labelme.py  learned.py  paths.py  preprocess.py  progress.py  vapor_fraction.py
tests/: test_paths.py  test_vapor_fraction.py
